[gd_scene load_steps=15 format=3 uid="uid://yy3ftbc0fioi"]

[ext_resource type="PackedScene" uid="uid://k5hriwdxiq3c" path="res://battle2/battle_moves1.tscn" id="1_80cxr"]
[ext_resource type="Script" uid="uid://cspm2wi3rcf7w" path="res://battle2/full_battle_remake.gd" id="1_k4baf"]
[ext_resource type="Script" uid="uid://bku5d8mqukoyq" path="res://battle2/battle_manager.gd" id="2_4tudq"]
[ext_resource type="Texture2D" uid="uid://2u1il1540htv" path="res://assets/text_box_mockup.png" id="2_45ofm"]
[ext_resource type="PackedScene" uid="uid://bs2uaal21cnd5" path="res://battle2/battle_options.tscn" id="2_k4baf"]
[ext_resource type="Script" uid="uid://nythq186ehyf" path="res://battle2/ui_manager.gd" id="2_ymdy3"]
[ext_resource type="Script" uid="uid://bgjje3ufeu2v0" path="res://battle2/text_manager.gd" id="3_ntymn"]
[ext_resource type="PackedScene" uid="uid://bk4v1v5112m5" path="res://battle2/text_box_arrow.tscn" id="5_2ik3i"]
[ext_resource type="Script" uid="uid://cs6hawiuwrna5" path="res://battle2/monster_updater.gd" id="5_rabaw"]
[ext_resource type="PackedScene" uid="uid://gjrmqwkyew54" path="res://battle2/BattleHPBar.tscn" id="5_tmqx8"]
[ext_resource type="Script" uid="uid://jfx731v3luyf" path="res://battle2/battle_slot.gd" id="6_g6li6"]
[ext_resource type="PackedScene" uid="uid://du534bamov2mp" path="res://battle2/BattleExpBar.tscn" id="6_rabaw"]
[ext_resource type="FontFile" uid="uid://dy160euuodr0b" path="res://assets/m5x7.ttf" id="7_tmqx8"]
[ext_resource type="PackedScene" uid="uid://dgvx2lqngbvy8" path="res://battle2/level_indicator.tscn" id="13_3dqtn"]

[node name="FullBattleRemake" type="Node2D" node_paths=PackedStringArray("battle_mgr", "moves1", "options", "pslot1", "eslot1") groups=["battle_ui"]]
z_index = 1
script = ExtResource("1_k4baf")
battle_mgr = NodePath("BattleManager")
moves1 = NodePath("UIManager/BattleMoves1")
options = NodePath("UIManager/BattleOptions")
pslot1 = NodePath("MonsterUpdater/PlayerSlot1")
eslot1 = NodePath("MonsterUpdater/EnemySlot1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -5.0
offset_top = -5.0
offset_right = 647.0
offset_bottom = 366.0
color = Color(0.313726, 0.8, 1, 1)

[node name="TextPanel" type="TextureRect" parent="." groups=["battle_ui"]]
z_index = 1
offset_left = 320.0
offset_top = 240.0
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("2_45ofm")

[node name="TextManager" type="Control" parent="TextPanel" node_paths=PackedStringArray("arrow")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ntymn")
arrow = NodePath("TextBoxArrow")

[node name="VBoxContainer" type="VBoxContainer" parent="TextPanel/TextManager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TextPanel/TextManager/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextPanel/TextManager/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TextPanel/TextManager/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="TextPanel/TextManager/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("7_tmqx8")
theme_override_fonts/mono_font = ExtResource("7_tmqx8")
theme_override_fonts/italics_font = ExtResource("7_tmqx8")
theme_override_fonts/bold_italics_font = ExtResource("7_tmqx8")
theme_override_fonts/bold_font = ExtResource("7_tmqx8")
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 32
scroll_active = false

[node name="MarginContainer2" type="MarginContainer" parent="TextPanel/TextManager/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="TextPanel/TextManager/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="TextBoxArrow" parent="TextPanel/TextManager" instance=ExtResource("5_2ik3i")]
position = Vector2(302, 101)

[node name="BattleManager" type="Node" parent="." node_paths=PackedStringArray("txt_mgr", "enemy_party")]
script = ExtResource("2_4tudq")
txt_mgr = NodePath("../TextPanel/TextManager")
enemy_party = NodePath("../MonsterUpdater/EnemyParty")

[node name="UIManager" type="Node" parent="." node_paths=PackedStringArray("battle", "moves1", "txt_mgr")]
script = ExtResource("2_ymdy3")
battle = NodePath("BattleOptions")
moves1 = NodePath("BattleMoves1")
txt_mgr = NodePath("../TextPanel/TextManager")

[node name="BattleMoves1" parent="UIManager" groups=["battle_ui"] instance=ExtResource("1_80cxr")]
z_index = 1

[node name="BattleOptions" parent="UIManager" groups=["battle_ui"] instance=ExtResource("2_k4baf")]
z_index = 1

[node name="MonsterUpdater" type="Node" parent="." node_paths=PackedStringArray("pm1", "em1") groups=["monster_updater"]]
script = ExtResource("5_rabaw")
pm1 = NodePath("PlayerSlot1")
em1 = NodePath("EnemySlot1")

[node name="PlayerSlot1" type="Node2D" parent="MonsterUpdater" groups=["battle_ui"]]
unique_name_in_owner = true
z_index = 1
script = ExtResource("6_g6li6")

[node name="Image" type="TextureRect" parent="MonsterUpdater/PlayerSlot1"]
custom_minimum_size = Vector2(128, 128)
offset_left = 100.0
offset_top = 65.0
offset_right = 228.0
offset_bottom = 193.0
flip_h = true

[node name="BattleHpBar" parent="MonsterUpdater/PlayerSlot1" groups=["battle_ui"] instance=ExtResource("5_tmqx8")]
position = Vector2(0, 220)

[node name="BattleExpBar" parent="MonsterUpdater/PlayerSlot1" groups=["battle_ui"] instance=ExtResource("6_rabaw")]
position = Vector2(240, 230)

[node name="NameLabel" type="Label" parent="MonsterUpdater/PlayerSlot1" groups=["battle_ui"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 220.0
offset_top = 218.5
offset_right = 260.0
offset_bottom = 241.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_tmqx8")
text = "Name"
horizontal_alignment = 1

[node name="EnemySlot1" type="Node2D" parent="MonsterUpdater" node_paths=PackedStringArray("lvl_label") groups=["battle_ui"]]
z_index = 1
script = ExtResource("6_g6li6")
lvl_label = NodePath("LevelIndicator")

[node name="Image" type="TextureRect" parent="MonsterUpdater/EnemySlot1"]
custom_minimum_size = Vector2(128, 128)
offset_left = 419.0
offset_top = 67.0
offset_right = 547.0
offset_bottom = 195.0

[node name="BattleHpBar" parent="MonsterUpdater/EnemySlot1" groups=["battle_ui"] instance=ExtResource("5_tmqx8")]
position = Vector2(320, 220)

[node name="LevelIndicator" parent="MonsterUpdater/EnemySlot1" instance=ExtResource("13_3dqtn")]
offset_left = 484.0
offset_top = 222.0
offset_right = 518.0
offset_bottom = 235.0

[node name="NameLabel" type="Label" parent="MonsterUpdater/EnemySlot1" groups=["battle_ui"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 558.0
offset_top = 222.0
offset_right = 598.0
offset_bottom = 245.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_tmqx8")
text = "Name"
horizontal_alignment = 1

[node name="EnemyParty" type="Node" parent="MonsterUpdater"]

[connection signal="battle_ready" from="." to="UIManager" method="_on_full_battle_remake_battle_ready"]
[connection signal="battle_ui_requested" from="." to="UIManager" method="_hide_party"]
[connection signal="turn_action_swap" from="." to="BattleManager" method="_on_player1_switch"]
[connection signal="battle_completed" from="BattleManager" to="UIManager" method="_on_battle_manager_battle_completed"]
[connection signal="pm1_move_used" from="BattleManager" to="BattleManager" method="_on_pm_1_move_used"]
[connection signal="pm1_switch" from="BattleManager" to="BattleManager" method="_on_pm_1_switched"]
[connection signal="text_ready" from="BattleManager" to="TextPanel/TextManager" method="_on_battle_manager_text_ready"]
[connection signal="turn_completed" from="BattleManager" to="UIManager" method="_on_battle_manager_turn_completed"]
[connection signal="party_requested" from="UIManager" to="." method="_on_party_requested"]
[connection signal="send_moves1" from="UIManager" to="UIManager/BattleMoves1" method="display_moves"]
[connection signal="pm1_move_used" from="UIManager/BattleMoves1" to="BattleManager" method="_on_player1_move_used"]
[connection signal="em1_switched" from="MonsterUpdater" to="BattleManager" method="_on_em_1_ready"]
[connection signal="pm1_switched" from="MonsterUpdater" to="BattleManager" method="_on_pm_1_switched"]
[connection signal="pm1_switched" from="MonsterUpdater" to="UIManager" method="_display_moves1"]
